@@ -7,7 +7,10 @@
 #############################################################################
 
 # the files needed by the test cases (without `testfiles/' directory)
-TESTFILES = 
+TESTFILES = fig2b.chor fig2bIll.chor fig2c.chor \
+	    fig4b.chor fig4c.chor fig4d.chor \
+	    fig5.chor \
+	    fig6b.chor fig6c.chor fig6d.chor 
 
 
 # Below you can list all the files you do not want to have counted in the
